// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows custom classes 1`] = `
<div>
  <button
    class="
      button
      blah
    "
    data-testid="pill-button"
  >
    custom class
  </button>
</div>
`;

exports[`renders the expected classes 1`] = `
<div>
  <button
    class="
      button
      
    "
    data-testid="pill-button"
  >
    hello world
  </button>
</div>
`;
